--- a/07-主索引鍵-(Primary-Key)-的規劃心得.html
+++ b/07-主索引鍵-(Primary-Key)-的規劃心得.html
@@ -1,8 +1,8 @@
 07-主索引鍵-(Primary-Key)-的規劃心得
-2020ironman-day05-learn-from-advantureworks-database.html
+2020ironman-day07-primary-key-design-notes.html
 
-<p>根據正規化定義
-每一筆資料列皆要有能夠識別一致多個欄位組合是唯一
+<p>根據正規化定義<br/>
+每一筆資料列皆要有能夠識別一致多個欄位組合是唯一<br/>
 主索引鍵就是用來識別資料列的鍵值</p>
 
 <p>主索引鍵特性</p>
@@ -14,34 +14,34 @@
 <li>使用一至多個欄位</li>
 </ul>
 
-<h3 id="">設計要領</h3>
+<h2>設計要領</h2>
 
 <p>主索引鍵資料形態越小越好</p>
 
-<p>今天設計一個縣市的資料表
-目前縣市總數不會超過 256 個
+<p>今天設計一個縣市的資料表<br/>
+目前縣市總數不會超過 256 個<br/>
 該資料表的主索引鍵資料型態選擇 TINYINT 就會比較適合</p>
 
-<h3 id="-1">問題探討</h3>
+<h2>問題探討</h2>
 
-<h4 id="-2">是否該使用身分證字號建立主索引鍵</h2>
+<h3>是否該使用身分證字號建立主索引鍵</h3>
 
 <p>先來檢視身分證字號儲存資料的定義</p>
 
 <p>戶政系統規劃：每個人都會有自己<strong>唯一</strong>的身分證字號</p>
 
-<p>常識理解身分證字號是不會重複
+<p>常識理解身分證字號是不會重複<br/>
 但現實往往就是會遇到<strong>重複</strong>的資料（通常是手動輸入錯誤）</p>
 
-<p>先前就處理過身份證字號一堆重複
+<p>先前就處理過身份證字號一堆重複<br/>
 結果客戶要求唯一條件變更為<strong>身分證字號</strong>與<strong>出生日期</strong></p>
 
 <blockquote>
   <p>這一變更資料庫的關聯都需要進行異動</p>
 </blockquote>
 
-<p>有打算使用<strong>身分證字號</strong>建立資料表的主索引鍵
+<p>有打算使用<strong>身分證字號</strong>建立資料表的主索引鍵<br/>
 透過額外建立一個數字欄位作為主索引鍵 (primary-key)</p>
 
-<p>然後將<strong>身分證字號</strong>欄位設定成唯一限制 (unique) 
+<p>然後將<strong>身分證字號</strong>欄位設定成唯一限制 (unique)<br/>
 會是個比較有彈性的選擇</p>
